@@ -9,8 +9,9 @@ apport (0.31) UNRELEASED; urgency=low
     apport-utils will get redesigned and put into this package, too.
   * debian/control: apport now depends on python-apport instead of
     python-apport-utils.
+  * apport_utils.py: Quiesce gdb error messages in test suite.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 25 Nov 2006 12:25:23 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 25 Nov 2006 12:30:41 +0100
 
 apport (0.30) feisty; urgency=low
 
